# tui-widgets

./: .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile  release-plz.toml  typos.toml
.github/: dependabot.yml
.github/release-plz/: tui-equalizer.toml
.github/workflows/: check.yml  release-plz.yml  test.yml  tui-scrollbar.yml
src/: lib.rs
tui-bar-graph/: CHANGELOG.md  Cargo.toml
tui-bar-graph/examples/: simple-bar-graph.rs  tui-bar-graph.rs
tui-bar-graph/src/: lib.rs
tui-big-text/: CHANGELOG.md  Cargo.toml  README.md
tui-big-text/examples/: alignment.rs  big_text.rs  pixel_size.rs  stopwatch.rs
tui-big-text/src/: big_text.rs  lib.rs
tui-box-text/: CHANGELOG.md  Cargo.toml  README.md
tui-box-text/examples/: box_text.rs
tui-box-text/src/: lib.rs
tui-cards/: CHANGELOG.md  Cargo.toml  README.md
tui-cards/examples/: card.rs
tui-cards/src/: lib.rs
tui-equalizer/: CHANGELOG.md  Cargo.toml  README.md
tui-equalizer/examples/: demo.rs
tui-equalizer/src/: lib.rs
tui-popup/: CHANGELOG.md  Cargo.toml  README.md
tui-popup/examples/: paragraph.rs  popup.rs  state.rs
tui-popup/src/: lib.rs  popup_state.rs
tui-prompts/: CHANGELOG.md  Cargo.toml  README.md
tui-prompts/examples/: multi_line.rs  select.rs  select.tape  text.rs
tui-prompts/src/: lib.rs  prompt.rs  select_prompt.rs  select_state.rs  text_prompt.rs  text_state.rs
tui-qrcode/: CHANGELOG.md  Cargo.toml
tui-qrcode/examples/: qrcode.rs
tui-qrcode/src/: lib.rs
tui-scrollbar/: CHANGELOG.md  Cargo.toml  README.md
tui-scrollbar/examples/: scrollbar.rs  (+2 more)
tui-scrollview/: CHANGELOG.md  Cargo.toml  README.md
(+12 files in other folders)
