[package]
name = "tui-bar-graph"
description = "A Ratatui widget for rendering pretty bar graphs in the terminal"
version = "0.3.3"
documentation = "https://docs.rs/tui-bar-graph"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
## enables std
std = ["strum/std"]

[dependencies]
colorgrad = { version = "0.8", default-features = false, features = ["preset"] }
document-features.workspace = true
ratatui-core.workspace = true
strum.workspace = true

[dev-dependencies]
clap.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
rand.workspace = true
ratatui = { workspace = true, default-features = true }

[[example]]
name = "tui-bar-graph"
required-features = ["std"]
